# colorpath

./: .gitignore  CLAUDE.md  README.md  demo_decomposition.py  demo_visium_dopamine.py  demo_visium_plasma.py  pathway_viz.py  pyproject.toml  requirements.txt  robustness_multisection.py  scan_pathways.py
colorpath/: __init__.py  spatial.py
colorpath/decomposition/: __init__.py  contributions.py  losses.py  nmf_independent.py  nmf_linear.py  nmf_loglevel.py  saturation.py
colorpath/illustration/: __init__.py  bridge.py  pathway_graph.py  pathway_image.py  pathways.py
gait/: __init__.py  benchmark.py  spatial.py
gait/decomposition/: __init__.py  contributions.py  diagnostics.py  losses.py  nmf_independent.py  nmf_linear.py  nmf_loglevel.py  saturation.py  selection.py
gait/illustration/: __init__.py  bridge.py  pathway_graph.py  pathway_image.py
manuscript/: Makefile  colorpath_manuscript.md  main.tex  make_figures.py  ref.bib  supplement.tex
tests/: test_benchmark.py  test_decomposition.py  test_scan.py  test_spatial.py
